--- a/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
@@ -143,3 +143,9 @@
     }
   }
 }
+
+.ambient-video .ambient-video__control[data-state="play"] .play-icon {
+  fill: #fff;
+}
+
+
